fixed x overflow css

--- a/project4/network/static/network/styles.css
+++ b/project4/network/static/network/styles.css
@@ -6,7 +6,7 @@
 
 body {
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: #08295E;
 }
 
@@ -21,7 +21,7 @@ p {
     justify-content: flex-start;
     align-items: stretch;
     height: 100%;
-    width: 100%;
+    max-width: 100%;
 }
 
 .form-container {
